--- a/index.html
+++ b/index.html
@@ -370,7 +370,8 @@
                 }
             });
         });
-    </script>
+    </script>const PROXY_BASE_URL = 'http://localhost:3000'; // <--- TRÈS IMPORTANT : METTEZ VOTRE URL DE PROXY ICI
 </body>
                           </html>
             Ajout de la page index.html              
+Mise à jour de l'URL du proxy"
